# OkTest

./: .gitmodules  ApiInterceptor  README.md  build.gradle  note  settings.gradle  sqllite  xmpp协议
app/: build.gradle  gradle.properties  note.md  proguard-rules.pro  rainy.jks  write
app/pic/: coroutineScheduler.awebp
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shader/: fragment_texture.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/: one_frame.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/media/player/def_player/: player.cpp  player.h
app/src/main/cpp/media/render/video/: video_render.h
app/src/main/cpp/media/render/video/native_render/: native_render.cpp  native_render.h
app/src/main/cpp/utils/: logger.h
app/src/main/res/anim/: activity_in.xml  popupwindow_enter.xml  view_animation_sample.xml
app/src/main/res/animator/: anim_left.xml  animate_test.xml  state_list_animator.xml
app/src/main/res/drawable/: aat_shape_exam_point.xml  bg_btn_click_orange_line.xml  btn_orange_line_normal.xml  btn_orange_line_press.xml  flow_textview_bg.xml  layer_demo.xml  layer_list_bg.xml  layer_list_test.xml  layerlist_ring.xml  level_list.xml  libvideo_recorder_default.xml  select_vector.xml  selector_main_text.xml  selector_signin_item.xml  shape_bottom_sheet.xml  shape_round_conor.xml  shape_thumbnail_back.xml  shape_video_next.xml  signin_item_normal_bg.xml  signin_item_select_bg.xml  signin_item_signed_bg.xml  tint_bitmap_drawable.xml  triangle_drawable.xml  triangle_drawable1.xml  vector1.xml  vector2.xml  vector_anim.xml  vector_arrow.xml  vector_drawable.xml  vectoranimation.xml
app/src/main/res/drawable-xhdpi/: selector_cb.xml
app/src/main/res/layout/: acitivity_alipayhome.xml  activity_aidltest.xml  activity_animatortest.xml  activity_bar_chart.xml  activity_base.xml  activity_binding_list.xml  activity_bitmapoptions.xml  activity_camera.xml  activity_camera_gl_surface_show.xml  activity_camera_record.xml  activity_camera_surface_texture.xml  activity_coordinate.xml  activity_countdowntimer.xml  activity_drawablebutton.xml  activity_egl_player.xml  activity_expandlist.xml  activity_ffmpeg_info.xml  activity_fileprovider.xml  activity_flowlayout.xml  activity_flutter.xml  (+68 more)
gradle/wrapper/: gradle-wrapper.properties
my_flutter/lib/: main.dart
testdaynight/: build.gradle
testdaynight/src/main/: AndroidManifest.xml
testlibrary/: build.gradle
testlibrary/src/main/: AndroidManifest.xml
(+512 files in other folders)
